# LibWindowsTray

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  example.c  tray.h  tray_windows.c
